# fireball_quest

client/: package-lock.json  package.json  vite.config.ts
client/src/lib/: test.ts
client/src/routes/: +layout.svelte
client/src/routes/[...catchall]/: +page.server.ts
client/src/routes/chat/: +layout.svelte  MessageItem.svelte  Sidebar.svelte  SidebarItems.svelte
client/src/routes/chat/[id]/: +page.svelte
client/src/routes/home/: +page.svelte
client/src/routes/login/: +page.svelte
client/src/routes/signup/: +page.svelte
server/: README.md  main.py  pyproject.toml  schema.sql
